--- a/views/shell.pug
+++ b/views/shell.pug
@@ -17,6 +17,7 @@ html
     link(rel='manifest', href='manifest.json')
     link(type='text/css', rel='stylesheet',
       href='//fonts.googleapis.com/css?family=Roboto:300,500,400|Material+Icons')
+    link(type='text/css', rel='stylesheet', href='semantic/semantic.css?20160713')
     link(type='text/css', rel='stylesheet', href='styles.css?20160713')
     link(type='image/x-icon', rel='icon', href='favicon.ico')
     meta(name='theme-color', content='#212121')
