--- a/shared/views/broadcast-host.pug
+++ b/shared/views/broadcast-host.pug
@@ -3,3 +3,14 @@
 
   .preview-container(aria-hidden=true).shadow-1.camera-enabled
     video#broadcast-preview
+
+  div
+    button.ui.labeled.icon.button#record-button
+      i.record.icon
+      | Record
+    .ui.buttons#record-delay-buttons
+      .ui.left.labeled.button
+        label.ui.basic.label Delay
+        button.ui.button(data-time=5) 5 seconds
+      button.ui.button(data-time=10) 10 seconds
+      button.ui.button(data-time=30) 30 seconds
