--- a/views/shell.pug
+++ b/views/shell.pug
@@ -49,3 +49,4 @@ html
         ga('send', 'pageview')
       script(type='text/javascript', async, src='//www.google-analytics.com/analytics.js')
     script(type='text/javascript', async, src='client.js')
+    script(type='text/javascript', async, src='public/semantic/semantic.js')
