initial display for broadcaster

--- a/shared/views/room.pug
+++ b/shared/views/room.pug
@@ -6,7 +6,7 @@ main.room
     else
       include broadcast-viewer.pug
     if hostFingerprint === null
-      p this party is waiting to start or already over
+      p waiting for party host
   #message-pane
     ul#message-list.shadow-1
 footer#message-input
