--- a/shared/views/broadcast-host.pug
+++ b/shared/views/broadcast-host.pug
@@ -1,16 +1,21 @@
 
 .broadcast-host-video.displayed
 
-  .preview-container(aria-hidden=true).shadow-1.camera-enabled
+  .preview-container.shadow-1.camera-enabled
     video#broadcast-preview
 
-  div
-    button.ui.labeled.icon.button#record-button
-      i.record.icon
-      | Record
-    .ui.buttons#record-delay-buttons
-      .ui.left.labeled.button
-        label.ui.basic.label Delay
-        button.ui.button(data-time=5) 5 seconds
-      button.ui.button(data-time=10) 10 seconds
-      button.ui.button(data-time=30) 30 seconds
+  form#broadcast-form
+    .control-group
+      button.control.ui.labeled.icon.button#record-button
+        i.record.icon
+        | Record
+      .control
+        .ui.buttons#record-delay-buttons
+          .ui.left.labeled.button
+            label.ui.basic.label Delay
+            button.ui.button(data-time=5) 5 seconds
+          button.ui.button(data-time=10) 10 seconds
+          button.ui.button(data-time=30) 30 seconds
+      .control.ui.action.input
+        input(type=text placeholder="What is this broadcast?")#broadcast-message
+        button.ui.button(type="submit")#brodcast-rename Update title only
