wip: refactor camera switch button, view current cast

--- a/shared/views/broadcast-host.pug
+++ b/shared/views/broadcast-host.pug
@@ -3,6 +3,7 @@
 
   .preview-container.shadow-1.camera-enabled
     video#broadcast-preview
+    include ./switch-camera
 
   form#broadcast-form
     .control-group
