--- a/shared/views/video-container.pug
+++ b/shared/views/video-container.pug
@@ -1,3 +1,5 @@
+include ./icons
 .video-container
   img.filmstrip(src=BLANK_IMAGE)
   button.save.shadow-1(title='Save as GIF')
+    +icon('save', 'invert')
