--- a/shared/views/broadcast-host.pug
+++ b/shared/views/broadcast-host.pug
@@ -4,6 +4,7 @@
   .preview-container.shadow-1.camera-enabled
     video#broadcast-preview
     include ./switch-camera
+  include ./subviews/progress
 
   form#broadcast-form
     .control-group
@@ -17,6 +18,9 @@
             button.ui.button(data-time=5) 5 seconds
           button.ui.button(data-time=10) 10 seconds
           button.ui.button(data-time=30) 30 seconds
+      button.save.ui.icon.button(title='Save as GIF')
+        //- i.save.icon
+        +icon('save')
       .control.ui.action.input
         input(type=text placeholder="What is this broadcast?")#broadcast-message
         button.ui.button(type="submit")#brodcast-rename Update title only
